--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,6 +4,7 @@
     "version": "0.2",
     "manifest_version": 3,
     "permissions": ["storage", "activeTab", "scripting"],
+    "options_page": "options/options.html",
     "action": {
         "default_popup": "popup.html",
         "default_icon": {
